add unit test  to  image Service

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.servlet.multipart.max-request-size=215MB
 
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
-sqli.cantine.images.url.meals="http://localhost:8080/cantine/download/images/meals/
+sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
