--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/cantine
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 #spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=false
 #
 # You can change this at runtime:
@@ -21,4 +23,7 @@ spring.servlet.multipart.max-request-size=215MB
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
+
+#le chemin  vers  lo  dosiier  qui  contient des images des  users
+#default user image
 sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
