correct unit  test  after  exitMeal retun  method  had changed

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -1,7 +1,8 @@
 # PostGreSQL data base
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/cantine
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/cantine_tests
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 #spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=false
@@ -26,4 +27,4 @@ sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meal
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
-sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
+#sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
