--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -15,11 +15,10 @@ spring.datasource.password=halim
 #logging.level.root=trace
 
 #10Mo max image size
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=215MB
-
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.file-size-threshold=2KB
+#spring.servlet.multipart.max-file-size=2MB
+#spring.servlet.multipart.max-request-size=21MB
 
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
