update .properties  test file

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -15,11 +15,11 @@ spring.datasource.password=halim
 #logging.level.root=trace
 
 #10Mo max image size
-#spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.file-size-threshold=2KB
-#spring.servlet.multipart.max-file-size=2MB
-#spring.servlet.multipart.max-request-size=21MB
-
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=21MB
+sqli.cantine.images.meals.path=images/meals
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
