add menu image repository to application.properties

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -19,8 +19,11 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=21MB
-sqli.cantine.images.meals.path=images/meals
 
+
+
+sqli.cantine.images.meals.path=images/meals
+sqli.cantine.images.menu.path=images/menus
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 
