--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.servlet.multipart.max-request-size=21MB
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 
 
+sqli.cantine.images.menu.path=images/menus
 sqli.cantine.images.meals.path=images/meals
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
