--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -23,7 +23,7 @@ spring.servlet.multipart.max-request-size=21MB
 
 
 sqli.cantine.images.meals.path=images/meals
-sqli.cantine.images.menu.path=images/menus
+sqli.cantine.images.menus.path=images/menus
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 
