update menu  images path

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.servlet.multipart.max-request-size=21MB
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
-
+sqli.cantine.images.url.menus=http://localhost:8080/cantine/download/images/menus/
 
 sqli.cantine.images.menus.path=images/menus
 sqli.cantine.images.meals.path=images/meals
