update properties file

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -26,7 +26,7 @@ sqli.cantine.images.meals.path=images/meals
 sqli.cantine.images.menus.path=images/menus
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
-
+sqli.cantine.images.url.menus=http://localhost:8080/cantine/download/images/menus/
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
 #sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
