--- a/Backend/Cantine/.gitignore
+++ b/Backend/Cantine/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/images/meals/**
+/images/
 ### STS ###
 .apt_generated
 .classpath
