--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -30,3 +30,4 @@ sqli.cantine.images.meals.path=images/meals
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
 sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
+sqli.cantine.admin.email.domain=@social.aston-ecole.com
