--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -24,10 +24,19 @@ spring.servlet.multipart.max-request-size=210MB
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 sqli.cantine.images.url.menus=http://localhost:8080/cantine/download/images/menus/
-
 sqli.cantine.images.menus.path=images/menus
 sqli.cantine.images.meals.path=images/meals
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
-sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
+
+sqli.cantine.image.admin.path=images/persons/admin
+
+
+
+
+2685e476-c9f9-4a40-8121-2a9e96f7a946defaultStudentProfileImage.png
+
+
+sqli.cantine.default.persons.student.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultStudentProfileImage.png
+sqli.cantine.default.persons.admin.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
 sqli.cantine.admin.email.domain=@social.aston-ecole.com
