update  configuration  file in  tests

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -21,12 +21,12 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=21MB
 
 
-
-sqli.cantine.images.meals.path=images/meals
-sqli.cantine.images.menus.path=images/menus
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 sqli.cantine.images.url.menus=http://localhost:8080/cantine/download/images/menus/
+sqli.cantine.images.menus.path=images/menus
+sqli.cantine.images.meals.path=images/meals
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
-#sqli.cantine.default.user.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultUserProfileImage.png
+
+sqli.cantine.image.admin.path=images/persons/admin
