--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -39,4 +39,4 @@ sqli.cantine.image.admin.path=images/persons/admin
 
 sqli.cantine.default.persons.student.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultStudentProfileImage.png
 sqli.cantine.default.persons.admin.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
-sqli.cantine.admin.email.domain=@social.aston-ecole.com
+sqli.cantine.admin.email.domain=social.aston-ecole.com
