add  mailer  Configuration

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -34,9 +34,20 @@ sqli.cantine.image.admin.path=images/persons/admin
 
 
 
-2685e476-c9f9-4a40-8121-2a9e96f7a946defaultStudentProfileImage.png
 
 
 sqli.cantine.default.persons.student.imagename=f0c8f269-de45-48cd-a327-a702e61dbac2defaultStudentProfileImage.png
 sqli.cantine.default.persons.admin.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
 sqli.cantine.admin.email.domain=social.aston-ecole.com
+
+
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=yahiaouiali4019@gmail.com
+spring.mail.password=ppckevsehztjuzbd
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
