--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=210MB
 
+sali.cantine.server.port=8080
+sqli.cantine.server.protocol=https://
+sqli.cantine.server.ip.address=localhost
 
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
