add   send token  for  email  validation  to   admin

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -20,6 +20,9 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=21MB
 
+sali.cantine.server.port=8080
+sqli.cantine.server.protocol=http://
+sqli.cantine.server.ip.address=localhost
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
@@ -37,7 +40,7 @@ sqli.cantine.image.admin.path=images/persons/admin
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=yahiaouiali4019@gmail.com
-spring.mail.password=ppckevsehztjuzbd
+#spring.mail.password=vzzdbqaglbhyhptr
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
