add student  path  directory

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -33,6 +33,7 @@ sqli.cantine.images.meals.path=images/meals
 #default user image
 
 sqli.cantine.image.admin.path=images/persons/admin
+sqli.cantine.image.student.path=images/persons/students
 
 
 
@@ -46,10 +47,9 @@ sqli.cantine.admin.email.domain=social.aston-ecole.com
 
 
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.username=yahiaouiali4019@gmail.com
-spring.mail.password=ppckevsehztjuzbd
+#spring.mail.password=rfhnntlkzdugqzxl
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
