add Student  Container Test With  All Inforamtion

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -36,7 +36,7 @@ sqli.cantine.default.persons.student.imagename=f0c8f269-de45-48cd-a327-a702e61db
 sqli.cantine.default.persons.admin.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
 sqli.cantine.admin.email.domain=social.aston-ecole.com
 sqli.cantine.image.admin.path=images/persons/admin
-
+sqli.cantine.image.student.path=images/persons/students
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=yahiaouiali4019@gmail.com
