--- a/Backend/Cantine/pom.xml
+++ b/Backend/Cantine/pom.xml
@@ -64,6 +64,13 @@
 			<version>3.5.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
