add path  to  Order/Qrbar

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -35,6 +35,7 @@ sqli.cantine.images.meals.path=images/meals
 sqli.cantine.image.admin.path=images/persons/admin
 sqli.cantine.image.student.path=images/persons/students
 
+sqli.canine.order.qrcode.path=images/orders/qrcode
 
 
 
