add  image  qrcode format

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -36,7 +36,7 @@ sqli.cantine.image.admin.path=images/persons/admin
 sqli.cantine.image.student.path=images/persons/students
 
 sqli.canine.order.qrcode.path=images/orders/qrcode
-
+sqli.canine.order.qrcode.image.format=.png
 
 
 
