--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -32,7 +32,7 @@ sqli.cantine.images.meals.path=images/meals
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
 #default user image
 sqli.canine.order.qrcode.path=images/orders/qrcode
-
+sqli.canine.order.qrcode.image.format=.png
 
 sqli.cantine.default.persons.student.imagename=f0c8f269-de45-48cd-a327-a702e61dbac2defaultStudentProfileImage.png
 sqli.cantine.default.persons.admin.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
