--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -50,7 +50,7 @@ sqli.cantine.admin.email.domain=social.aston-ecole.com
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=yahiaouiali4019@gmail.com
-#spring.mail.password=rfhnntlkzdugqzxl
+spring.mail.password=gpsnucromxmaofte
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
