update  confirmation  toke  url

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -19,9 +19,10 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=210MB
 
-sali.cantine.server.port=8080
+sali.cantine.server.port=4200
 sqli.cantine.server.protocol=https://
 sqli.cantine.server.ip.address=localhost
+sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/
 
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
@@ -54,6 +55,6 @@ spring.mail.host=smtp.gmail.com
 spring.mail.username=yahiaouiali4019@gmail.com
 spring.mail.password=gpsnucromxmaofte
 spring.mail.port=587
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.auth=true        
 spring.mail.properties.mail.smtp.starttls.enable=true
 
