--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=210MB
 
 sali.cantine.server.port=4200
-sqli.cantine.server.protocol=https://
+sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
 sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/
 
