add  student  image  url  to  application properties

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -28,6 +28,7 @@ sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 sqli.cantine.images.url.menus=http://localhost:8080/cantine/download/images/menus/
+sqli.cantine.images.url.student=http://localhost:8080/cantine/download/images/persons/students/
 sqli.cantine.images.menus.path=images/menus
 sqli.cantine.images.meals.path=images/meals
 #le chemin  vers  lo  dosiier  qui  contient des images des  users
