update  admin Service

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -29,6 +29,7 @@ sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
 sqli.cantine.images.url.menus=http://localhost:8080/cantine/download/images/menus/
 sqli.cantine.images.url.student=http://localhost:8080/cantine/download/images/persons/students/
+sqli.cantine.images.url.admin=http://localhost:8080/cantine/download/images/persons/admin/
 sqli.cantine.order.qrcode.url=http://localhost:8080/cantine/download/images/orders/
 sqli.cantine.images.menus.path=images/menus
 sqli.cantine.images.meals.path=images/meals
