update  upload image  services  and  unit Tests

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -49,3 +49,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
+sqli.cantine.default.student.images.directory=imagesTests
+sqli.cantine.default.student.images.file=ImageForTest.jpg
