--- a/Backend/Cantine/pom.xml
+++ b/Backend/Cantine/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>fr.sqli</groupId>
-	<artifactId>Cantine</artifactId>
+	<artifactId>cantine</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Cantine</name>
