add  checkLinkValidity service and  controller

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -62,3 +62,9 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true        
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+
+############## Confirmation Email  Images Templete ##############################
+sqli.cantine.confirmation.email.sqli.image.url=https://i.imgur.com/UNeFRPR.png
+sqli.cantine.confirmation.email.cantiere.logo.url=https://i.imgur.com/rdCsTot.png
+sqli.cantine.confirmation.email.aston.logo.url=https://i.imgur.com/4Cdbt48.png
