--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.servlet.multipart.max-request-size=210MB
 sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
-sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/
+sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/token?
 sqli.canine.server.reset.password.url=/cantine/user/reset-password
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
