WIP  for reset  password

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -23,7 +23,7 @@ sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
 sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/token?
-sqli.canine.server.reset.password.url=/cantine/user/reset-password
+sqli.canine.server.reset.password.url=/cantine/user/reset-password?token=
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
 sqli.cantine.images.url.meals=http://localhost:8080/cantine/download/images/meals/
