add  confiramtion  link  after  registration

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -19,10 +19,14 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=210MB
 
+#super admin
+sqli.cantine.superAdmin.firstName="halim"
+sqli.cantine.superAdmin.email="yahiaouihlm@gmail.com"
+
 sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
-sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token/token?
+sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token?token=
 sqli.canine.server.reset.password.url=/cantine/user/reset-password?token=
 
 #le chemin  vers  lo  dosiier  qui  contient des images des  meals
