--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=210MB
 
 #super admin
-sqli.cantine.superAdmin.firstName="halim"
-sqli.cantine.superAdmin.email="yahiaouihlm@gmail.com"
+sqli.cantine.superAdmin.firstName=halim
+sqli.cantine.superAdmin.email=yahiaouihlm@gmail.com
 
 sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
