add change Email Student  ability  to  admins $

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.servlet.multipart.max-request-size=210MB
 #super admin
 sqli.cantine.superAdmin.firstName=halim
 sqli.cantine.superAdmin.email=yahiaouihlm@gmail.com
+sqli.cantine.front.url=http://localhost:4200/cantine/home
 
 sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
