send confirmation add  amount  from  admin  to  student

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.servlet.multipart.max-request-size=210MB
 sqli.cantine.superAdmin.firstName=halim
 sqli.cantine.superAdmin.email=yahiaouihlm@gmail.com
 sqli.cantine.front.url=http://localhost:4200/cantine/home
-
+sqli.cantine.administration.number.phone=0666666666
 sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
