send  email  for  order  confirmation

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -22,7 +22,8 @@ spring.servlet.multipart.max-request-size=210MB
 #super admin
 sqli.cantine.superAdmin.firstName=halim
 sqli.cantine.superAdmin.email=yahiaouihlm@gmail.com
-sqli.cantine.front.url=http://localhost:4200/cantine/home
+sqli.cantine.front.home.url=http://localhost:4200/cantine/home
+sqli.cantine.front.students.orders.url=http://localhost:4200/cantine/students/orders
 sqli.cantine.administration.number.phone=0666666666
 sali.cantine.server.port=4200
 sqli.cantine.server.protocol=http://
