update student  Order Service

--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=210MB
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #super admin
 sqli.cantine.superAdmin.firstName=halim
 sqli.cantine.superAdmin.email=yahiaouihlm@gmail.com
