update admin signUp  container  tests

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -40,12 +40,26 @@ sqli.cantine.admin.email.domain=social.aston-ecole.com
 sqli.cantine.image.admin.path=images/persons/admin
 sqli.cantine.image.student.path=images/persons/students
 
+
+# Email configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.username=yahiaouiali4019@gmail.com
-#spring.mail.password=rfhnntlkzdugqzxl
+spring.mail.password=gpsnucromxmaofte
+#25
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# super  admin  email  configuration
+sqli.cantine.superAdmin.firstName=halim
+sqli.cantine.superAdmin.email=adminEmail@test.com
+
+
+
+
+
+
 
 
 
