update  update  Admin  Information

--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/cantine_tests
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 #spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=false
