--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -34,8 +34,8 @@ sqli.cantine.images.meals.path=images/meals
 sqli.canine.order.qrcode.path=images/orders/
 sqli.canine.order.qrcode.image.format=.png
 
-sqli.cantine.student.default.image=f0c8f269-de45-48cd-a327-a702e61dbac2defaultStudentProfileImage.png
-sqli.cantine.admin.default.image=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
+sqli.cantine.default.persons.student.imagename=f0c8f269-de45-48cd-a327-a702e61dbac2defaultStudentProfileImage.png
+sqli.cantine.default.persons.admin.imagename=2685e476-c9f9-4a40-8121-2a9e96f7a946defaultAdminProfileImage.png
 sqli.cantine.admin.email.domain=social.aston-ecole.com
 sqli.cantine.image.admin.path=images/persons/admin
 sqli.cantine.image.student.path=images/persons/students
