--- a/Backend/Cantine/src/test/resources/application.properties
+++ b/Backend/Cantine/src/test/resources/application.properties
@@ -21,6 +21,7 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=21MB
 
 sali.cantine.server.port=8080
+sqli.canine.server.port.mobile=8100
 sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
 
