--- a/Backend/Cantine/src/main/resources/application.properties
+++ b/Backend/Cantine/src/main/resources/application.properties
@@ -28,6 +28,7 @@ sqli.cantine.front.home.url=http://localhost:4200/cantine/home
 sqli.cantine.front.students.orders.url=http://localhost:4200/cantine/students/orders
 sqli.cantine.administration.number.phone=0666666666
 sali.cantine.server.port=4200
+sqli.canine.server.port.mobile=8100
 sqli.cantine.server.protocol=http://
 sqli.cantine.server.ip.address=localhost
 sqli.cantine.server.confirmation.token.url=/cantine/user/confirmation-token?token=
