--- a/Frontend/Cantine/Dockerfile
+++ b/Frontend/Cantine/Dockerfile
@@ -5,6 +5,6 @@ RUN npm install
 RUN npm install ng-otp-input @angular/material
 COPY . .
 RUN  npm run build
-FROM nginx:stable
-COPY --from=build /app/dist/cantine/  /usr/share/nginx/html
+FROM nginx:alpine
+COPY --from=build /app/dist/cantine/  /app
 COPY nginx.conf /etc/nginx/nginx.conf
